fix: partners list - country alignment

--- a/src/components/OrganizationResult.css
+++ b/src/components/OrganizationResult.css
@@ -6,12 +6,18 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: left;
+  justify-content: space-between;
   margin-bottom: 15px;
 }
 
 .dots-map__organization-result header .dots-map__icon {
   margin-right: 8px;
+}
+
+.dots-map__organization-name-and-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
 .dots-map__organization-resultname {
